# touche

./: .browserslistrc  .eslintrc  .gitignore  COPYRIGHT  HACKING.md  README.md  babel.config.js  com.github.joseexposito.touche.yml  com.github.joseexposito.touchegg-gui.yml  io.github.joseexposito.touchegg-gui.yml  jsconfig.json  meson.build  meson_options.txt  package-lock.json  package.json  webpack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml
bundle/: build-template.js  info.js  meson.build  webpack.config.js
bundle/scripts/: build.js  start.js  translate.js
bundle/templates/: bin-entry-point.in  entry.bin.template  src.gresource.xml.in  src.gresource.xml.template  webpack-entry-point.in
bundle/webpack-plugins/: compile-gresource-webpack-plugin.js  compile-translations-webpack-plugin.js  entry-template-webpack-plugin.js
data/: app.appdata.xml.in.in  com.github.joseexposito.touchegg-gui.appdata.xml  com.github.joseexposito.touchegg-gui.desktop  data.gresource.xml.in  desktop.in.in  elementary.appdata.xml.in.in  gnome.appdata.xml.in.in  gschema.xml.in  license-header.js  meson.build  template.appdata.xml.in  touchegg-gui  touchegg-gui.appdata.xml  touchegg-gui.desktop  touchegg-gui.src.gresource.xml
data/assets/: global.css
debian/: changelog  control  copyright
debian/source/: lintian-overrides  options
po/: LINGUAS  de.po  en.po  es.po  fi.po  fr.po  it.po  nl.po  ru.po  tr.po  zh.po  zh_TW.po
rpm/: touche.spec
src/: app-window.js  gesture-list-row.js  gesture-list-view.js  gesture-list.js  index.js  pkg-init.js  test.js
src/add-app-view/: index.js
src/config/: action-type.js  all-apps.js  animation-type.js  gesture-direction.js  gesture-type.js  gesture.js  io.js  model.js  paths.js  xml-config.js
src/gesture-list/: gesture-list-row.js  index.js
src/gesture-list-view/: gesture-list-header.js  gesture-list-row.js  index.js  row-item.js  styles.css
src/main-view/: index.js  views.js
src/main-view/content/: gesture-list-row.js  gesture-list.js  index.js  pinch-view.js  shortcut-button.js  swipe-view.js  tap-view.js
src/main-view/content/row-settings/: animation-combo-box-text.js  index.js  mouse-click-row-settings.js  run-command-row-settings.js  send-keys-row-settings.js  tile-window-row-settings.js
src/main-view/sidebar/: index.js  sidebar-header.js  sidebar-row.js
src/not-installed-view/: index.js
src/state/: index.js  root-reducer.js
src/state/config/: index.js
src/state/gestures/: index.js
src/state/utils/: index.js
src/utils/: no-scroll-combo-box-text.js
subprojects/libtouche/: meson.build  touche.c  touche.cpp  touche.h
