# If the app is running in a Flatpak container
# Available in code as a boolean in "process.env.FLATPAK"
option('flatpak', type: 'string', value: 'false')

# Path to the system configuration file
# Override it on Flatpak or if Touchégg was installed in a different prefix
option('system-config-file-path', type: 'string', value: '/usr/share/touchegg/touchegg.conf')
